Alignment bug fix.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -735,6 +735,7 @@ h1.product-slogan {
     width: 100%;
     min-height: 100%;
     min-width: 100%;
+    vertical-align: middle;
 }
 
 #company-news div.dimmer div.white-bg p {
